# Raytracer

./: .gitignore  CMakeLists.txt
src/: Color.h  Vec3.h  main.cpp
